# packaging-tutorial

./: .gitignore  README.md
example1/: setup.cfg
example2/: LICENSE
example2/src/eat/: __init__.py
images/: packaging.graffle
part1-basics/: README.md
part1-basics/example/: setup.cfg
part2-bells-and-whistles/: README.md
part2-bells-and-whistles/code/: MANIFEST.in  README.md  setup.cfg  setup.py
