[metadata]
name = eat-example-marcverhagen
version = 0.0.2
author = Jane Doe
author_email = jane@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcverhagen/packaging-tutorial-part1
project_urls =
    Bug Tracker = https://github.com/marcverhagen/packaging-tutorial-part1/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src
